// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ArticleStack Slice matches snapshot with default width 1`] = `
<DocumentFragment>
  <div
    class="css-1s57n01"
  >
    <div
      class="css-uxiwo2"
    >
      <div
        class="css-1vgdeio"
        style="margin-block: space000;"
      >
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1ms6dj6"
            />
            <div
              class="css-1kb13lf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="article-info css-d8brxu"
                >
                  <span
                    class="css-ciimpt"
                  >
                    NEW
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1kanhs9"
                  >
                    PROFILE
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-135o9vn"
                    >
                      Short title of the card describing the main content 5
                    </span>
                  </span>
                </a>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <p
                      class="css-lp9m77"
                    >
                      160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                    </p>
                  </span>
                </a>
                <div
                  class="css-1kfs2jd"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-qx2986"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1selp7x"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1ms6dj6"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kb13lf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="article-info css-d8brxu"
                >
                  <span
                    class="css-ciimpt"
                  >
                    EXCLUSIVE
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1kanhs9"
                  >
                    REVIEW
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-135o9vn"
                    >
                      Short title of the card describing the main content 6
                    </span>
                  </span>
                </a>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <p
                      class="css-lp9m77"
                    >
                      160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                    </p>
                  </span>
                </a>
                <div
                  class="css-1kfs2jd"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-qx2986"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1selp7x"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-uxiwo2"
    >
      <div
        class="css-r51htr"
      >
        <div
          class="css-11l110t"
        >
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1ms6dj6"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-1kb13lf"
          >
            <div
              class="lead-image-container css-1pgtvq2"
            >
              <div
                class="lead-article-image css-fe1bh6"
              >
                <a
                  class="article-image"
                  href="https://www.thetimes.co.uk"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Short title of the card describing the main content 7"
                      class="lcpItem css-1qgqq71"
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173&resize=750"
                    />
                  </picture>
                </a>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="article-info css-d8brxu"
              >
                <span
                  class="css-ciimpt"
                >
                  NEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1kanhs9"
                >
                  REVIEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
              </div>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-135o9vn"
                  >
                    Short title of the card describing the main content 7
                  </span>
                </span>
              </a>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <p
                    class="css-lp9m77"
                  >
                    160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                  </p>
                </span>
              </a>
              <div
                class="css-1kfs2jd"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-qx2986"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1selp7x"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-11l110t"
        >
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1ms6dj6"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-1kb13lf"
          >
            <div
              class="lead-image-container css-1pgtvq2"
            >
              <div
                class="lead-article-image css-fe1bh6"
              >
                <a
                  class="article-image"
                  href="https://www.thetimes.co.uk"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Short title of the card describing the main content 8"
                      class="lcpItem css-1qgqq71"
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173&resize=750"
                    />
                  </picture>
                </a>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="article-info css-d8brxu"
              >
                <span
                  class="css-ciimpt"
                >
                  EXCLUSIVE
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1kanhs9"
                >
                  INTERVIEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
              </div>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-135o9vn"
                  >
                    Short title of the card describing the main content 8
                  </span>
                </span>
              </a>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <p
                    class="css-lp9m77"
                  >
                    160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                  </p>
                </span>
              </a>
              <div
                class="css-1kfs2jd"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-qx2986"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1selp7x"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render ArticleStack renders with passed width 1`] = `
<DocumentFragment>
  <div
    class="css-1s57n01"
  >
    <div
      class="css-uxiwo2"
    >
      <div
        class="css-1szvsxp"
        style="margin-block: space000;"
      >
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1ms6dj6"
            />
            <div
              class="css-1kb13lf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="article-info css-d8brxu"
                >
                  <span
                    class="css-ciimpt"
                  >
                    NEW
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1kanhs9"
                  >
                    PROFILE
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-135o9vn"
                    >
                      Short title of the card describing the main content 5
                    </span>
                  </span>
                </a>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <p
                      class="css-lp9m77"
                    >
                      160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                    </p>
                  </span>
                </a>
                <div
                  class="css-1kfs2jd"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-qx2986"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1selp7x"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-6wnvz7"
        >
          <div
            class="css-13byt3y"
          >
            <div
              class="css-1ms6dj6"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kb13lf"
            >
              <div
                class="css-gpke1l"
              >
                <div
                  class="article-info css-d8brxu"
                >
                  <span
                    class="css-ciimpt"
                  >
                    EXCLUSIVE
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1kanhs9"
                  >
                    REVIEW
                  </span>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                </div>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-135o9vn"
                    >
                      Short title of the card describing the main content 6
                    </span>
                  </span>
                </a>
                <a
                  class="css-4rb6a9"
                  href="https://www.thetimes.co.uk"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <p
                      class="css-lp9m77"
                    >
                      160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                    </p>
                  </span>
                </a>
                <div
                  class="css-1kfs2jd"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-qx2986"
                      >
                        Tag
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-p44zak"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1selp7x"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-uxiwo2"
    >
      <div
        class="css-r51htr"
      >
        <div
          class="css-11l110t"
        >
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1ms6dj6"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-1kb13lf"
          >
            <div
              class="lead-image-container css-1pgtvq2"
            >
              <div
                class="lead-article-image css-fe1bh6"
              >
                <a
                  class="article-image"
                  href="https://www.thetimes.co.uk"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Short title of the card describing the main content 7"
                      class="lcpItem css-1qgqq71"
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173&resize=750"
                    />
                  </picture>
                </a>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="article-info css-d8brxu"
              >
                <span
                  class="css-ciimpt"
                >
                  NEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1kanhs9"
                >
                  REVIEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
              </div>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-135o9vn"
                  >
                    Short title of the card describing the main content 7
                  </span>
                </span>
              </a>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <p
                    class="css-lp9m77"
                  >
                    160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                  </p>
                </span>
              </a>
              <div
                class="css-1kfs2jd"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-qx2986"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1selp7x"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-11l110t"
        >
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
        </div>
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1ms6dj6"
          >
            <div
              class="css-gre9re"
            >
              <hr
                aria-hidden="true"
                class="css-1ft1o8k"
                data-testid="divider"
              />
            </div>
          </div>
          <div
            class="css-1kb13lf"
          >
            <div
              class="lead-image-container css-1pgtvq2"
            >
              <div
                class="lead-article-image css-fe1bh6"
              >
                <a
                  class="article-image"
                  href="https://www.thetimes.co.uk"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="Short title of the card describing the main content 8"
                      class="lcpItem css-1qgqq71"
                      src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173&resize=750"
                    />
                  </picture>
                </a>
              </div>
            </div>
            <div
              class="css-gpke1l"
            >
              <div
                class="article-info css-d8brxu"
              >
                <span
                  class="css-ciimpt"
                >
                  EXCLUSIVE
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1kanhs9"
                >
                  INTERVIEW
                </span>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
              </div>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-135o9vn"
                  >
                    Short title of the card describing the main content 8
                  </span>
                </span>
              </a>
              <a
                class="css-4rb6a9"
                href="https://www.thetimes.co.uk"
              >
                <span
                  class="css-17x5lw"
                >
                  <p
                    class="css-lp9m77"
                  >
                    160 C. count, turn down United’s bid for Mason Mount while Brentford have a club-record offer of £30 million for Brennan Johnson rejected turn down United’s bid
                  </p>
                </span>
              </a>
              <div
                class="css-1kfs2jd"
                data-testid="tag-and-flag"
              >
                <a
                  class="css-10d4t8c"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-qx2986"
                    >
                      Tag
                    </span>
                  </span>
                </a>
                <div
                  class="css-p44zak"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1selp7x"
                >
                  4 min read
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
